css/style.css
/* ... */
@media (min-width: 768px) {
  .owl-carousel.home-slider .slider-item .slider-text .one-forth {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 1200px;
    margin: 0 auto;
  }
}
@media (max-width: 991.98px) {
  .owl-carousel.home-slider .slider-item .slider-text .one-forth {
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
    padding: 1em;
  }
}
.owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
  position: relative;
}
@media (min-width: 992px) {
  .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
    position: absolute;
    top: 50%;
    left: 0;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    right: 0;
    max-width: 50%;
    padding-left: 45px;
    padding-right: 3em;
  }
}
.owl-carousel.home-slider .slider-item .slider-text .subheading {
  color: #000000;
  font-weight: 300;
  font-size: 12px;
  letter-spacing: 4px;
  text-transform: uppercase;
  display: inline-block;
  color: #fff;
}
@media (min-width: 992px) {
  .owl-carousel.home-slider .slider-item .slider-text .subheading {
    color: #000000;
    position: relative;
  }
  .owl-carousel.home-slider .slider-item .slider-text .subheading:after {
    position: absolute;
    bottom: -15px;
    left: -45px;
    right: 0;
    width: 100px;
    height: 1px;
    background: #1a1a1a;
    content: "";
  }
}
.owl-carousel.home-slider .slider-item .slider-text .text {
  position: relative;
  z-index: 1;
}
.owl-carousel.home-slider .slider-item .slider-text .horizontal {
  position: relative;
}
.owl-carousel.home-slider .slider-item .slider-text .horizontal h3.vr {
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: tb-lr;
  writing-mode: vertical-lr;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  text-orientation: sideways;
  text-align: right;
  text-orientation: sideways;
  margin: 0rem;
  position: absolute;
  top: 15px;
  left: -50px;
  height: 100%;
  text-transform: uppercase;
  font-weight: 300;
  letter-spacing: 3px;
  font-size: 12px;
  z-index: 1;
  color: #000000;
}
@media (max-width: 1199.98px) {
  .owl-carousel.home-slider .slider-item .slider-text .horizontal h3.vr {
    opacity: 0;
    display: none;
  }
}
.owl-carousel.home-slider .slider-item .slider-text h1 {
  font-size: 44px;
  color: #000000;
  line-height: 1.3;
  font-weight: 300;
}
.owl-carousel.home-slider .slider-item .slider-text h1 span {
  font-weight: 900;
}
@media (max-width: 991.98px) {
  .owl-carousel.home-slider .slider-item .slider-text h1 {
    color: #fff;
    font-size: 50px;
  }
}
@media (max-width: 767.98px) {
  .owl-carousel.home-slider .slider-item .slider-text h1 {
    font-size: 40px;
  }
}
.owl-carousel.home-slider .slider-item .slider-text p {
  color: rgba(0, 0, 0, 0.8);
  font-weight: 400;
}
@media (max-width: 991.98px) {
  .owl-carousel.home-slider .slider-item .slider-text p {
    color: rgba(255, 255, 255, 0.7);
    font-size: 23px;
  }
}
.owl-carousel.home-slider .owl-nav {
  position: absolute;
  bottom: 60px !important;
  left: 0;
  right: 0;
  margin: 0 auto;
}
@media (max-width: 991.98px) {
  .owl-carousel.home-slider .owl-nav {
    display: none;
  }
}
.owl-carousel.home-slider .owl-nav .owl-prev,
.owl-carousel.home-slider .owl-nav .owl-next {
  position: absolute;
  width: 60px;
  height: 60px;
  background: #fff !important;
  -moz-transition: all 0.7s ease;
  -o-transition: all 0.7s ease;
  -webkit-transition: all 0.7s ease;
  -ms-transition: all 0.7s ease;
  transition: all 0.7s ease;
  opacity: 1;
}
.owl-carousel.home-slider .owl-nav .owl-prev span:before,
.owl-carousel.home-slider .owl-nav .owl-next span:before {
  font-size: 20px;
  margin-top: 7px;
  color: #000000;
}
.owl-carousel.home-slider .owl-nav .owl-prev {
  top: 0 !important;
  right: 0 !important;
}
@media (min-width: 992px) {
  .owl-carousel.home-slider .owl-nav .owl-prev {
    right: 61px !important;
  }
}
.owl-carousel.home-slider .owl-nav .owl-prev:hover,
.owl-carousel.home-slider .owl-nav .owl-prev:focus {
  background: #000000 !important;
  outline: none !important;
}
.owl-carousel.home-slider .owl-nav .owl-prev:hover span:before,
.owl-carousel.home-slider .owl-nav .owl-prev:focus span:before {
  font-size: 20px;
  margin-top: 7px;
  color: #ffa45c;
}
.owl-carousel.home-slider .owl-nav .owl-next {
  top: 0 !important;
  right: 0 !important;
}
@media (min-width: 992px) {
  .owl-carousel.home-slider .owl-nav .owl-next {
    right: 0 !important;
  }
}
.owl-carousel.home-slider .owl-nav .owl-next:hover,
.owl-carousel.home-slider .owl-nav .owl-next:focus {
  background: #000000 !important;
  outline: none !important;
}
.owl-carousel.home-slider .owl-nav .owl-next:hover span:before,
.owl-carousel.home-slider .owl-nav .owl-next:focus span:before {
  font-size: 24px;
  margin-top: 7px;
  color: #ffa45c;
}
.owl-carousel.home-slider .owl-dots {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 40px;
  width: 100%;
  text-align: center;
}
@media (min-width: 992px) {
  .owl-carousel.home-slider .owl-dots {
    display: none;
  }
}
@media (max-width: 767.98px) {
  .owl-carousel.home-slider .owl-dots {
    bottom: 5px;
  }
}
.owl-carousel.home-slider .owl-dots .owl-dot {
  width: 10px;
  height: 10px;
  margin: 5px;
  border-radius: 50%;
  background: rgba(0, 0, 0, 0.4);
}
.owl-carousel.home-slider .owl-dots .owl-dot.active {
  background: #fff;
}

.bg-light {
  background: #f8f9fa !important;
}

.bg-primary {
  background: #ffa45c;
}

.btn {
  cursor: pointer;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  border-radius: 30px;
  -webkit-box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
  -moz-box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
  box-shadow: 0px 24px 36px -11px rgba(0, 0, 0, 0.09);
}
.btn:hover,
.btn:active,
.btn:focus {
  outline: none;
}
/* ... */

